--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 absl-py==2.3.1
-accelerate==0.21.0
+accelerate==1.12.0
 aiofiles==25.1.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.13.2
@@ -8,23 +8,27 @@ altair==6.0.0
 annotated-doc==0.0.4
 annotated-types==0.7.0
 anyio==4.12.0
+appdirs==1.4.4
 asttokens==3.0.1
 async-timeout==5.0.1
 attrs==25.4.0
-bitsandbytes==0.41.0
+bitsandbytes==0.48.2
 certifi==2025.11.12
 charset-normalizer==3.4.4
 click==8.3.1
+cloudpickle==3.1.2
 cmake==4.2.0
 contourpy==1.3.2
 cycler==0.12.1
 decorator==5.2.1
 deepspeed==0.9.5
-diffusers==0.21.0
+diffusers==0.36.0
 einops==0.6.1
 einops-exts==0.0.4
+etils==1.13.0
 exceptiongroup==1.3.1
 executing==2.2.1
+farama-notifications==0.0.4
 fastapi==0.123.9
 ffmpy==1.0.0
 filelock==3.20.0
@@ -32,22 +36,26 @@ fonttools==4.61.0
 frozenlist==1.8.0
 fsspec==2025.12.0
 gitdb==4.0.12
-GitPython==3.1.45
+gitpython==3.1.45
+glfw==2.10.0
 gradio==3.35.2
-gradio_client==0.2.9
+gradio-client==0.2.9
 grpcio==1.76.0
+gymnasium==1.2.2
 h11==0.14.0
 h5py==3.15.1
 hf-xet==1.2.0
 hjson==3.1.0
 httpcore==0.17.3
 httpx==0.24.0
-huggingface-hub==0.20.3
+huggingface-hub==0.36.0
 idna==3.11
-importlib_metadata==8.7.0
+imageio==2.37.2
+importlib-metadata==8.7.0
+importlib-resources==6.5.2
 ipython==8.37.0
 jedi==0.19.2
-Jinja2==3.1.6
+jinja2==3.1.6
 joblib==1.5.2
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
@@ -55,89 +63,98 @@ kiwisolver==1.4.9
 latex2mathml==3.78.1
 linkify-it-py==2.0.3
 lit==18.1.8
--e git+ssh://git@github.com/aadarshram/GRASP.git@c9dc39d3f606dab1e5be42f7862d219fdc01f282#egg=llava_pythia&subdirectory=src/llava-pythia
-Markdown==3.10
+markdown==3.10
 markdown-it-py==2.2.0
 markdown2==2.5.4
-MarkupSafe==3.0.3
+markupsafe==3.0.3
 matplotlib==3.10.7
 matplotlib-inline==0.2.1
 mdit-py-plugins==0.3.3
 mdurl==0.1.2
+metaworld==3.0.0
 mpmath==1.3.0
 msgpack==1.1.2
+mujoco==3.4.0
 multidict==6.7.0
 narwhals==2.13.0
 networkx==3.4.2
 ninja==1.13.0
 numpy==1.26.4
-nvidia-cublas-cu11==11.10.3.66
+nvidia-cublas==13.0.0.19
 nvidia-cublas-cu12==12.8.4.1
-nvidia-cuda-cupti-cu11==11.7.101
+nvidia-cuda-cupti==13.0.48
 nvidia-cuda-cupti-cu12==12.8.90
-nvidia-cuda-nvrtc-cu11==11.7.99
+nvidia-cuda-nvrtc==13.0.48
 nvidia-cuda-nvrtc-cu12==12.8.93
-nvidia-cuda-runtime-cu11==11.7.99
+nvidia-cuda-runtime==13.0.48
 nvidia-cuda-runtime-cu12==12.8.90
-nvidia-cudnn-cu11==8.5.0.96
 nvidia-cudnn-cu12==9.10.2.21
-nvidia-cufft-cu11==10.9.0.58
+nvidia-cudnn-cu13==9.13.0.50
+nvidia-cufft==12.0.0.15
 nvidia-cufft-cu12==11.3.3.83
+nvidia-cufile==1.15.0.42
 nvidia-cufile-cu12==1.13.1.3
-nvidia-curand-cu11==10.2.10.91
+nvidia-curand==10.4.0.35
 nvidia-curand-cu12==10.3.9.90
-nvidia-cusolver-cu11==11.4.0.1
+nvidia-cusolver==12.0.3.29
 nvidia-cusolver-cu12==11.7.3.90
-nvidia-cusparse-cu11==11.7.4.91
+nvidia-cusparse==12.6.2.49
 nvidia-cusparse-cu12==12.5.8.93
 nvidia-cusparselt-cu12==0.7.1
-nvidia-nccl-cu11==2.14.3
+nvidia-cusparselt-cu13==0.8.0
 nvidia-nccl-cu12==2.27.5
+nvidia-nccl-cu13==2.27.7
+nvidia-nvjitlink==13.0.39
 nvidia-nvjitlink-cu12==12.8.93
 nvidia-nvshmem-cu12==3.3.20
-nvidia-nvtx-cu11==11.7.91
+nvidia-nvshmem-cu13==3.3.24
+nvidia-nvtx==13.0.39
 nvidia-nvtx-cu12==12.8.90
+nvidia-pyindex==1.0.9
 opencv-python==4.9.0.80
 orjson==3.11.4
 packaging==25.0
 pandas==2.3.3
 parso==0.8.5
-peft==0.4.0
+peft==0.18.0
 pexpect==4.9.0
 pillow==12.0.0
+pip==25.3
 platformdirs==4.5.0
-prompt_toolkit==3.0.52
+prompt-toolkit==3.0.52
 propcache==0.4.1
 protobuf==6.33.1
 psutil==7.1.3
 ptyprocess==0.7.0
-pure_eval==0.2.3
+pure-eval==0.2.3
 py-cpuinfo==9.0.0
 pydantic==1.10.24
-pydantic_core==2.41.5
+pydantic-core==2.41.5
 pydub==0.25.1
-Pygments==2.19.2
+pygments==2.19.2
+pyopengl==3.1.10
 pyparsing==3.2.5
 python-dateutil==2.9.0.post0
 python-multipart==0.0.20
 pytz==2025.2
-PyYAML==6.0.3
+pyyaml==6.0.3
 referencing==0.37.0
 regex==2025.11.3
 requests==2.32.5
 rpds-py==0.30.0
 safetensors==0.7.0
-scikit-learn==1.2.2
+scikit-learn==1.8.0
 scipy==1.15.3
 semantic-version==2.10.0
-sentencepiece==0.1.99
+sentencepiece==0.2.1
 sentry-sdk==2.47.0
+setuptools==80.9.0
 shellingham==1.5.4
 shortuuid==1.0.13
 six==1.17.0
 smmap==5.0.2
 sniffio==1.3.1
--e git+ssh://git@github.com/aadarshram/GRASP.git@c9dc39d3f606dab1e5be42f7862d219fdc01f282#egg=src
+-e file:///home/nightfury/Desktop/GRASP
 stack-data==0.6.3
 starlette==0.50.0
 svgwrite==1.4.3
@@ -146,16 +163,16 @@ tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 threadpoolctl==3.6.0
 timm==0.6.13
-tokenizers==0.15.0
-torch==2.0.1
-torchvision==0.15.2
+tokenizers==0.22.1
+torch==2.9.1+cu130
+torchvision==0.24.1+cu130
 tqdm==4.67.1
 traitlets==5.14.3
-transformers==4.37.1
-triton==2.0.0
+transformers==4.57.3
+triton==3.5.1
 typer-slim==0.20.0
+typing-extensions==4.15.0
 typing-inspection==0.4.2
-typing_extensions==4.15.0
 tzdata==2025.2
 uc-micro-py==1.0.3
 urllib3==2.5.0
@@ -164,6 +181,6 @@ wandb==0.23.1
 wavedrom==2.0.3.post3
 wcwidth==0.2.14
 websockets==15.0.1
-Werkzeug==3.1.4
+werkzeug==3.1.4
 yarl==1.22.0
 zipp==3.23.0
